Add eDRAM and texture handling implementations, along with Android audio support
- Introduced eDRAM emulation for Xbox 360, including tiling and MSAA resolve.
- Implemented texture handling with DXT/BC decompression and format conversion.
- Added Android audio output using AAudio API for improved performance.
- Updated CMakeLists to include new source files for eDRAM, texture, and audio modules.
- Created a test tool for validating XEX loading and basic functionality.
- Enhanced kernel with XEX loader for executing Xbox 360 executables.

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -66,16 +66,20 @@ endif()
 set(GPU_SOURCES
     src/gpu/xenos/command_processor.cpp
     src/gpu/xenos/shader_translator.cpp
+    src/gpu/xenos/edram.cpp
+    src/gpu/xenos/texture.cpp
     src/gpu/vulkan/vulkan_backend.cpp
 )
 
 set(APU_SOURCES
     src/apu/xma_decoder.cpp
+    src/apu/android_audio.cpp
 )
 
 set(KERNEL_SOURCES
     src/kernel/hle/xboxkrnl.cpp
     src/kernel/hle/xam.cpp
+    src/kernel/xex_loader.cpp
 )
 
 set(MEMORY_SOURCES
@@ -195,6 +199,12 @@ if(X360MU_BUILD_TESTS AND NOT ANDROID)
     
     include(GoogleTest)
     gtest_discover_tests(x360mu_tests)
+    
+    # XEX Test Tool
+    add_executable(xex_test
+        tools/xex_test.cpp
+    )
+    target_link_libraries(xex_test x360mu_core)
 endif()
 
 # Install rules
