Enhance CMake configuration and add integration tests for Xbox 360 emulator
- Updated CMakeLists.txt to include new integration test executables for ISO mounting, XEX loading, and syscall tracing.
- Added shader translator unit tests to validate SPIR-V translation functionality.
- Introduced new test tools for executing instructions and validating memory operations.
- Included necessary source files and linked libraries for the new tests to ensure comprehensive coverage.
- Enhanced shader translation logic with improved resource analysis and caching mechanisms.
- Integrated filesystem support for virtual file operations, enabling better handling of game assets.

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -228,8 +228,9 @@ if(X360MU_BUILD_TESTS AND NOT ANDROID)
     # GPU/Vulkan tests only when Vulkan is available
     set(GPU_TEST_SOURCES "")
     if(X360MU_USE_VULKAN)
-        # Command processor tests can run without full Vulkan (uses mocks)
+        # Shader translator tests (no Vulkan runtime required)
         set(GPU_TEST_SOURCES 
+            tests/gpu/test_shader_translator.cpp
             tests/gpu/test_command_processor.cpp
         )
         if(Vulkan_FOUND)
@@ -272,6 +273,34 @@ if(X360MU_BUILD_TESTS AND NOT ANDROID)
         tools/xex_test.cpp
     )
     target_link_libraries(xex_test x360mu_core)
+    
+    # =========================================
+    # Integration Test Tools
+    # =========================================
+    
+    # Level 1: ISO Mount Test
+    add_executable(test_iso
+        tools/test_iso.cpp
+    )
+    target_link_libraries(test_iso x360mu_core)
+    
+    # Level 2: XEX Load Test
+    add_executable(test_xex_load
+        tools/test_xex_load.cpp
+    )
+    target_link_libraries(test_xex_load x360mu_core)
+    
+    # Level 3: Execution Test
+    add_executable(test_execute
+        tools/test_execute.cpp
+    )
+    target_link_libraries(test_execute x360mu_core)
+    
+    # Level 4: Syscall Trace
+    add_executable(test_syscalls
+        tools/test_syscalls.cpp
+    )
+    target_link_libraries(test_syscalls x360mu_core)
 endif()
 
 # Install rules
