Add XEX extraction tool and enhance import library parsing
- Introduced a new executable, `extract_xex`, for extracting XEX files from ISO images.
- Updated `parse_import_libraries` function to include data size checks and additional sanity checks for import counts and offsets, improving robustness against malformed data.
- Modified CMake configuration to link the new extraction tool with the core library.

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -284,6 +284,11 @@ if(X360MU_BUILD_TESTS AND NOT ANDROID)
     )
     target_link_libraries(test_iso x360mu_core)
     
+    add_executable(extract_xex
+        tools/extract_xex.cpp
+    )
+    target_link_libraries(extract_xex x360mu_core)
+    
     # Level 2: XEX Load Test
     add_executable(test_xex_load
         tools/test_xex_load.cpp
