Add Thread Scheduler and Kernel Event Management
- Introduced a ThreadScheduler to manage multi-threaded execution, allowing for better handling of guest threads and CPU resource allocation.
- Implemented kernel event objects (XEvent) for synchronization, enabling proper signaling and waiting mechanisms for threads.
- Enhanced the kernel's functionality to support event signaling and waiting, improving the emulator's ability to manage concurrent operations.
- Updated the kernel and HLE functions to utilize the new threading and event management features, ensuring compatibility with existing systems.

These changes significantly enhance the emulator's multi-threading capabilities and improve overall performance and responsiveness during execution.

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -99,6 +99,10 @@ set(APU_SOURCES
 set(KERNEL_SOURCES
     src/kernel/kernel.cpp
     src/kernel/threading.cpp
+    src/kernel/xobject.cpp
+    src/kernel/xthread.cpp
+    src/kernel/xevent.cpp
+    src/kernel/xkernel.cpp
     src/kernel/hle/xboxkrnl.cpp
     src/kernel/hle/xboxkrnl_extended.cpp
     src/kernel/hle/xboxkrnl_io.cpp
