Integrate mbedTLS for Cryptography and Update Build Process
- Replaced OpenSSL with mbedTLS for AES-128 and SHA-1 operations in xex_crypto, enhancing compatibility and performance on Android.
- Updated CMakeLists.txt to find and link mbedTLS, ensuring proper integration for both Android and host builds.
- Added a new build script for mbedTLS to facilitate building the library for Android, streamlining the setup process.
- Updated .gitignore to exclude mbedTLS build artifacts, improving project cleanliness.

These changes improve the cryptographic capabilities of the emulator while ensuring better support for Android environments.

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,10 @@ node_modules/
 third_party/ffmpeg/android/
 third_party/ffmpeg/include/
 
+# mbedTLS (built from source via third_party/build_mbedtls.sh)
+native/third_party/mbedtls/
+native/third_party/mbedtls-*/
+
 # Shader cache
 *.spv
 shaders/cache/
