--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -189,31 +189,47 @@ if(X360MU_USE_FFMPEG)
     add_definitions(-DX360MU_USE_FFMPEG)
 endif()
 
-# Find OpenSSL (REQUIRED for AES/SHA1 - no fallback)
+# Find mbedTLS (REQUIRED for AES/SHA1 - works on Android and host)
 if(ANDROID)
-    # For Android, expect prebuilt OpenSSL
-    find_package(OpenSSL QUIET)
-    if(NOT OpenSSL_FOUND)
-        # Try to find in third_party
-        set(OPENSSL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/openssl/include)
-        set(OPENSSL_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/openssl/android/${ANDROID_ABI})
-        if(EXISTS ${OPENSSL_INCLUDE_DIR})
-            include_directories(${OPENSSL_INCLUDE_DIR})
-            link_directories(${OPENSSL_LIB_DIR})
-            set(OPENSSL_LIBS ssl crypto)
-            set(OpenSSL_FOUND TRUE)
-        else()
-            message(FATAL_ERROR "OpenSSL is required but not found. Please install OpenSSL or provide prebuilt libraries in third_party/openssl/")
-        endif()
+    # For Android, use prebuilt static library from third_party
+    set(MBEDTLS_THIRD_PARTY_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/third_party/mbedtls/include)
+    set(MBEDTLS_THIRD_PARTY_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/mbedtls/android/${ANDROID_ABI})
+    set(MBEDTLS_THIRD_PARTY_LIB ${MBEDTLS_THIRD_PARTY_LIB_DIR}/libmbedcrypto.a)
+    
+    if(EXISTS ${MBEDTLS_THIRD_PARTY_LIB})
+        include_directories(${MBEDTLS_THIRD_PARTY_INCLUDE})
+        set(MBEDTLS_LIBS ${MBEDTLS_THIRD_PARTY_LIB})
+        message(STATUS "mbedTLS found in third_party for ${ANDROID_ABI}")
     else()
-        set(OPENSSL_LIBS OpenSSL::SSL OpenSSL::Crypto)
+        message(FATAL_ERROR "mbedTLS not found for Android ${ANDROID_ABI}. Run 'third_party/build_mbedtls.sh' to build it.")
     endif()
 else()
-    find_package(OpenSSL REQUIRED)
-    set(OPENSSL_LIBS OpenSSL::SSL OpenSSL::Crypto)
+    # For host builds, try system library first
+    find_library(MBEDCRYPTO_LIB mbedcrypto)
+    find_path(MBEDTLS_INCLUDE_DIR mbedtls/aes.h)
+    
+    if(MBEDCRYPTO_LIB AND MBEDTLS_INCLUDE_DIR)
+        include_directories(${MBEDTLS_INCLUDE_DIR})
+        set(MBEDTLS_LIBS ${MBEDCRYPTO_LIB})
+    else()
+        # Try pkg-config
+        find_package(PkgConfig QUIET)
+        if(PkgConfig_FOUND)
+            pkg_check_modules(MBEDCRYPTO QUIET mbedcrypto)
+            if(MBEDCRYPTO_FOUND)
+                include_directories(${MBEDCRYPTO_INCLUDE_DIRS})
+                link_directories(${MBEDCRYPTO_LIBRARY_DIRS})
+                set(MBEDTLS_LIBS ${MBEDCRYPTO_LIBRARIES})
+            endif()
+        endif()
+        
+        if(NOT MBEDTLS_LIBS)
+            message(FATAL_ERROR "mbedTLS is required but not found. Please install libmbedtls-dev (apt) or mbedtls (brew/vcpkg)")
+        endif()
+    endif()
 endif()
 
-message(STATUS "OpenSSL found: using for AES-128 and SHA-1")
+message(STATUS "mbedTLS found: using for AES-128 and SHA-1")
 
 # Find SPIRV-Tools and glslang (REQUIRED for SPIR-V generation when Vulkan is enabled)
 if(X360MU_USE_VULKAN)
@@ -279,8 +295,8 @@ if(X360MU_USE_VULKAN AND VULKAN_LIB)
     target_link_libraries(x360mu_core ${VULKAN_LIB})
 endif()
 
-# Link OpenSSL (required)
-target_link_libraries(x360mu_core ${OPENSSL_LIBS})
+# Link mbedTLS (required for crypto)
+target_link_libraries(x360mu_core ${MBEDTLS_LIBS})
 
 # Link SPIRV-Tools/glslang
 if(SPIRV_LIBS)
@@ -441,7 +457,7 @@ message(STATUS "Build type:     ${CMAKE_BUILD_TYPE}")
 message(STATUS "JIT enabled:    ${X360MU_ENABLE_JIT}")
 message(STATUS "Vulkan:         ${X360MU_USE_VULKAN}")
 message(STATUS "FFmpeg:         ${X360MU_USE_FFMPEG}")
-message(STATUS "OpenSSL:        YES (required)")
+message(STATUS "mbedTLS:        YES (required)")
 message(STATUS "glslang:        ${SPIRV_LIBS}")
 message(STATUS "Tests:          ${X360MU_BUILD_TESTS}")
 message(STATUS "ASAN:           ${X360MU_ENABLE_ASAN}")
