Refactor SPIR-V Handling and Update CMake Configuration
- Modified CMakeLists.txt to make SPIRV-Tools and glslang optional, allowing for a custom SPIR-V builder when not found, improving build flexibility.
- Updated status messages to reflect the new configuration and provide clearer feedback on the availability of SPIRV-Tools and glslang.
- Added new functions in spirv_builder.cpp for less than and greater than equal operations, enhancing the SPIR-V instruction set support.

These changes improve the build process and expand the functionality of the SPIR-V builder, contributing to better shader validation and optimization capabilities.

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -231,57 +231,24 @@ endif()
 
 message(STATUS "mbedTLS found: using for AES-128 and SHA-1")
 
-# Find SPIRV-Tools and glslang (REQUIRED for SPIR-V generation when Vulkan is enabled)
-if(X360MU_USE_VULKAN)
-    if(ANDROID)
-        # For Android, expect prebuilt glslang or use from NDK
-        find_package(glslang CONFIG QUIET)
-        if(NOT glslang_FOUND)
-            # Try to find in third_party
-            set(GLSLANG_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/glslang/include)
-            set(GLSLANG_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/glslang/android/${ANDROID_ABI})
-            if(EXISTS ${GLSLANG_INCLUDE_DIR})
-                include_directories(${GLSLANG_INCLUDE_DIR})
-                link_directories(${GLSLANG_LIB_DIR})
-                set(SPIRV_LIBS glslang SPIRV)
-            else()
-                message(FATAL_ERROR "glslang is required for Vulkan builds but not found. Please install glslang or provide prebuilt libraries in third_party/glslang/")
-            endif()
-        else()
-            set(SPIRV_LIBS glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits)
+# SPIRV-Tools and glslang are OPTIONAL - we have a custom SPIR-V builder
+# These can be used for validation/optimization if available
+option(X360MU_USE_SPIRV_TOOLS "Use SPIRV-Tools/glslang for shader validation (optional)" OFF)
+if(X360MU_USE_SPIRV_TOOLS AND X360MU_USE_VULKAN AND NOT ANDROID)
+    find_package(glslang CONFIG QUIET)
+    if(glslang_FOUND)
+        set(SPIRV_LIBS glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits)
+        find_package(SPIRV-Tools CONFIG QUIET)
+        if(SPIRV-Tools_FOUND)
+            list(APPEND SPIRV_LIBS SPIRV-Tools-opt SPIRV-Tools)
         endif()
+        add_definitions(-DX360MU_USE_SPIRV_TOOLS)
+        message(STATUS "glslang found: using for SPIR-V validation")
     else()
-        # Try to find glslang
-        find_package(glslang CONFIG QUIET)
-        
-        if(glslang_FOUND)
-            set(SPIRV_LIBS glslang::glslang glslang::SPIRV glslang::glslang-default-resource-limits)
-            find_package(SPIRV-Tools CONFIG QUIET)
-            if(SPIRV-Tools_FOUND)
-                list(APPEND SPIRV_LIBS SPIRV-Tools-opt SPIRV-Tools)
-            endif()
-        else()
-            # Try pkg-config
-            find_package(PkgConfig QUIET)
-            if(PkgConfig_FOUND)
-                pkg_check_modules(GLSLANG QUIET glslang)
-                if(GLSLANG_FOUND)
-                    include_directories(${GLSLANG_INCLUDE_DIRS})
-                    set(SPIRV_LIBS ${GLSLANG_LIBRARIES})
-                    pkg_check_modules(SPIRV_TOOLS QUIET SPIRV-Tools)
-                    if(SPIRV_TOOLS_FOUND)
-                        list(APPEND SPIRV_LIBS ${SPIRV_TOOLS_LIBRARIES})
-                    endif()
-                endif()
-            endif()
-        endif()
-        
-        if(NOT SPIRV_LIBS)
-            message(FATAL_ERROR "glslang is required for Vulkan builds but not found. Please install glslang-dev or glslang package.")
-        endif()
+        message(STATUS "glslang not found: using custom SPIR-V builder")
     endif()
-    
-    message(STATUS "glslang found: using for SPIR-V generation")
+else()
+    message(STATUS "Using custom SPIR-V builder")
 endif()
 
 # Main library
@@ -458,7 +425,7 @@ message(STATUS "JIT enabled:    ${X360MU_ENABLE_JIT}")
 message(STATUS "Vulkan:         ${X360MU_USE_VULKAN}")
 message(STATUS "FFmpeg:         ${X360MU_USE_FFMPEG}")
 message(STATUS "mbedTLS:        YES (required)")
-message(STATUS "glslang:        ${SPIRV_LIBS}")
+message(STATUS "SPIRV-Tools:    ${SPIRV_LIBS}")
 message(STATUS "Tests:          ${X360MU_BUILD_TESTS}")
 message(STATUS "ASAN:           ${X360MU_ENABLE_ASAN}")
 message(STATUS "================================")
