Implement Multi-Threaded Guest Execution Fix for Stream D
- Introduced a comprehensive fix for the purple screen issue caused by improper GPU initialization due to unprocessed Deferred Procedure Calls (DPCs).
- Integrated XKernel processing into the main emulator loop to ensure DPCs, timers, and APCs are executed, allowing games to reach GPU initialization.
- Updated multiple files, including `emulator.cpp`, `xobject.cpp`, and `xkernel.cpp`, to facilitate the new DPC handling mechanism.
- Added new tests for DPC execution and integration to validate the implementation and ensure stability in multi-threaded scenarios.

These changes significantly enhance the emulator's ability to handle multi-threaded execution, improving game initialization and overall performance.

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -338,12 +338,14 @@ if(X360MU_BUILD_TESTS AND NOT ANDROID)
         tests/kernel/test_xevent.cpp
         tests/kernel/test_xthread.cpp
         tests/kernel/test_xkernel.cpp
+        tests/kernel/test_dpc_execution.cpp
         tests/apu/test_audio.cpp
         # Integration tests
         tests/integration/test_syscall_integration.cpp
         tests/integration/test_threading_integration.cpp
         tests/integration/test_xex_integration.cpp
         tests/integration/test_file_hle_integration.cpp
+        tests/integration/test_dpc_integration.cpp
         ${JIT_TEST_SOURCES}
         ${GPU_TEST_SOURCES}
     )
