Add address mapping unit tests for Xbox 360 memory
- Introduced a new test file `test_address_mapping.cpp` to validate the address routing logic for the Xbox 360 memory map.
- Implemented tests covering various address ranges including main RAM, GPU MMIO, usermode virtual space, and kernel space.
- Ensured that the JIT compiler's address routing logic is accurately reflected in the tests, verifying both fast memory and MMIO paths.
- Added batch tests to check the expected behavior for a range of addresses, ensuring comprehensive coverage of the memory mapping functionality.
- Enhanced logging in `cpu.cpp` to track execution context and program counter (PC) for debugging purposes.

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -331,6 +331,7 @@ if(X360MU_BUILD_TESTS AND NOT ANDROID)
         tests/cpu/test_interpreter.cpp
         tests/cpu/test_vmx128.cpp
         tests/memory/test_memory.cpp
+        tests/memory/test_address_mapping.cpp
         tests/kernel/test_xex_loader.cpp
         tests/kernel/test_filesystem.cpp
         tests/kernel/test_file_io.cpp
